// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpgradeButton snapshot can upgrade 1`] = `
<ForwardRef
  as="a"
  disabled={false}
  href="upgradeUrl"
  iconBefore={[Function]}
  onClick={[MockFunction trackUpgradeClick]}
  variant="outline-primary"
>
  Upgrade
</ForwardRef>
`;

exports[`UpgradeButton snapshot cannot upgrade 1`] = `
<ForwardRef
  disabled={true}
  iconBefore={[Function]}
  variant="outline-primary"
>
  Upgrade
</ForwardRef>
`;
